# snake

./: CMakeLists.txt  copy.ps1  copy.sh  emu.sh
assets-cg/party_hat/: fxconv-metadata.txt
src/: main.c
